exports[`Navigation should mount successfully 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
|  
.VueCarousel-navigation
  a.VueCarousel-navigation-button.VueCarousel-navigation-prev.VueCarousel-navigation--disabled(href=\'#\', style=\'padding: 8px; margin-right: -8px;\') &#x25C0;
  |  
  a.VueCarousel-navigation-button.VueCarousel-navigation-next(href=\'#\', style=\'padding: 8px; margin-left: -8px;\') &#x25B6;
"
`;

exports[`Navigation should render a next button 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
|  
.VueCarousel-navigation
  a.VueCarousel-navigation-button.VueCarousel-navigation-prev.VueCarousel-navigation--disabled(href=\'#\', style=\'padding: 8px; margin-right: -8px;\') &#x25C0;
  |  
  a.VueCarousel-navigation-button.VueCarousel-navigation-next(href=\'#\', style=\'padding: 8px; margin-left: -8px;\') &#x25B6;
"
`;

exports[`Navigation should render a prev button 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
|  
.VueCarousel-navigation
  a.VueCarousel-navigation-button.VueCarousel-navigation-prev.VueCarousel-navigation--disabled(href=\'#\', style=\'padding: 8px; margin-right: -8px;\') &#x25C0;
  |  
  a.VueCarousel-navigation-button.VueCarousel-navigation-next(href=\'#\', style=\'padding: 8px; margin-left: -8px;\') &#x25B6;
"
`;

exports[`Navigation should trigger page advance backward when prev is clicked 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
|  
.VueCarousel-navigation
  a.VueCarousel-navigation-button.VueCarousel-navigation-prev(href=\'#\', style=\'padding: 8px; margin-right: -8px;\') &#x25C0;
  |  
  a.VueCarousel-navigation-button.VueCarousel-navigation-next.VueCarousel-navigation--disabled(href=\'#\', style=\'padding: 8px; margin-left: -8px;\') &#x25B6;
"
`;

exports[`Navigation should trigger page advance when next is clicked 1`] = `
".VueCarousel-wrapper
  .VueCarousel-inner(style=\'visibility: hidden;\')
    .VueCarousel-slide
    .VueCarousel-slide
|  
.VueCarousel-pagination
  .VueCarousel-dot-container
    .VueCarousel-dot(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(239, 239, 239);\')
    .VueCarousel-dot.VueCarousel-dot--active(style=\'margin-top: 20px; padding: 10px;\')
      .VueCarousel-dot-inner(style=\'width: 10px; height: 10px; background: rgb(0, 0, 0);\')
|  
.VueCarousel-navigation
  a.VueCarousel-navigation-button.VueCarousel-navigation-prev(href=\'#\', style=\'padding: 8px; margin-right: -8px;\') &#x25C0;
  |  
  a.VueCarousel-navigation-button.VueCarousel-navigation-next.VueCarousel-navigation--disabled(href=\'#\', style=\'padding: 8px; margin-left: -8px;\') &#x25B6;
"
`;
